# abcg

examples/: CMakeLists.txt
examples/asteroids/: window.cpp
examples/coloredsun/: CMakeLists.txt  README.md  board.cpp  board.hpp  main.cpp  window.cpp  window.hpp
examples/coloredsun/assets/: objects.frag  objects.vert
examples/coloredtriangles/: window.cpp  window.hpp
examples/cube/: CMakeLists.txt  README.md  cube.cpp  cube.hpp  ground.cpp  ground.hpp  model.cpp  model.hpp  window.cpp  window.hpp
examples/cube/assets/: light.frag  light.vert
examples/emilly/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
examples/firstapp/: window.cpp
examples/lookat/: camera.cpp  camera.hpp  window.cpp  window.hpp
examples/reaction/: CMakeLists.txt  README.md  main.cpp  window.cpp  window.hpp
examples/sierpinski/: window.cpp  window.hpp
examples/tictactoe/: window.cpp
examples/viewer1/: window.cpp
examples/viewer2/: model.cpp  model.hpp  window.cpp  window.hpp
examples/warships/: CMakeLists.txt  main.cpp  window.cpp  window.hpp
public/: coloredsun.html  emilly.html  reaction.html
