# add_subdirectory(helloworld)
# add_subdirectory(firstapp)
# add_subdirectory(tictactoe)
# add_subdirectory(warships)
# add_subdirectory(reaction)
# add_subdirectory(sierpinski)
# add_subdirectory(emilly)
# add_subdirectory(coloredtriangles)
# add_subdirectory(regularpolygons)
# add_subdirectory(asteroids)
# add_subdirectory(loadmodel)
# add_subdirectory(seriesoftubes)
# add_subdirectory(coloredsun)
# add_subdirectory(lookat)
add_subdirectory(viewer1)